--- a/rhythm.html
+++ b/rhythm.html
@@ -25,12 +25,12 @@
 
 <script>
 const RHYTHMS=[
-    { file:"Ta.png", code:"t " },{ file:"Titi.png", code:"tt " },{ file:"Rest.png", code:"z " },{ file:"Too.png", code:"to " },
-    { file:"Tikatika.png", code:"tktk " },{ file:"Titika.png", code:"ttk " },{ file:"Tikati.png", code:"tkt " },
-    { file:"Tamti.png", code:"tmt " },{ file:"Syncopa.png", code:"scp " },
-    { file:"Tooo.png", code:"too " },{ file:"Toooo.png", code:"tooo " },
-    { file:"Timka.png", code:"tmk " },{ file:"Katim.png", code:"ktm " },
-    { file:"Ti.png", code:"ti " },{ file:"Tirest.png", code:"tiz " },{ file:"Tum.png", code:"tum " },{ file:"Tititi.png", code:"ttt " }
+    { file:"ta.png", code:"t " },{ file:"titi.png", code:"tt " },{ file:"rest.png", code:"z " },{ file:"too.png", code:"to " },
+    { file:"tikatika.png", code:"tktk " },{ file:"titika.png", code:"ttk " },{ file:"tikati.png", code:"tkt " },
+    { file:"tamti.png", code:"tmt " },{ file:"syncopa.png", code:"scp " },
+    { file:"tooo.png", code:"too " },{ file:"toooo.png", code:"tooo " },
+    { file:"timka.png", code:"tmk " },{ file:"katim.png", code:"ktm " },
+    { file:"ti.png", code:"ti " },{ file:"tirest.png", code:"tiz " },{ file:"tum.png", code:"tum " },{ file:"tititi.png", code:"ttt " }
 ];
 
 const grid=document.getElementById("rhythm-grid");
@@ -74,6 +74,7 @@ grid.appendChild(undoCell);
 
 </body>
 </html>
+
 
 
 
