--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+ <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
     
     <meta charset="UTF-8">
     <title>Folkedex</title>
@@ -373,4 +376,5 @@ $.fn.dataTable.ext.search.push(function (settings, rowData, dataIndex) {
 </script>
 </body>
 </html>
+
 
