--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 
 
+
+ <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+
     
     <meta charset="UTF-8">
     <title>Folkedex</title>
@@ -375,6 +378,7 @@ $.fn.dataTable.ext.search.push(function (settings, rowData, dataIndex) {
 </script>
 </body>
 </html>
+
 
 
 
