--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
 
- <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+ <link rel="shortcut icon" type="image/x-icon" href="favicon.png?">
 
     
     <meta charset="UTF-8">
@@ -378,6 +378,7 @@ $.fn.dataTable.ext.search.push(function (settings, rowData, dataIndex) {
 </script>
 </body>
 </html>
+
 
 
 
