--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
  <link rel="shortcut icon" type="image/x-icon" href="5.ico?">
 
+ <link rel="icon" type="image/x-icon" href="5.ico?"> <!-- Desktop browser icon -->
+<link rel="manifest" href="site.webmanifest">
+
     
     <meta charset="UTF-8">
     <title>Folkedex</title>
@@ -378,6 +381,7 @@ $.fn.dataTable.ext.search.push(function (settings, rowData, dataIndex) {
 </script>
 </body>
 </html>
+
 
 
 
