--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
  <link rel="shortcut icon" type="image/x-icon" href="5.ico?">
 
- <link rel="icon" type="image/x-icon" href="5.ico?"> <!-- Desktop browser icon -->
-<link rel="manifest" href="site.webmanifest">
+<link rel="apple-touch-icon" sizes="128x128" href="5.ico?">
 
     
     <meta charset="UTF-8">
@@ -381,6 +380,7 @@ $.fn.dataTable.ext.search.push(function (settings, rowData, dataIndex) {
 </script>
 </body>
 </html>
+
 
 
 
