--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
  <link rel="shortcut icon" type="image/x-icon" href="5.ico?">
 
-<link rel="apple-touch-icon" sizes="128x128" href="5.ico?">
+<link rel="apple-touch-icon" sizes="132x132" href="6.ico?">
+ <link rel="icon shortcut" sizes="132x132" href="6.ico?">
 
     
     <meta charset="UTF-8">
@@ -380,6 +381,7 @@ $.fn.dataTable.ext.search.push(function (settings, rowData, dataIndex) {
 </script>
 </body>
 </html>
+
 
 
 
