--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 <link rel="apple-touch-icon" sizes="132x132" href="6.ico?">
  <link rel="icon shortcut" sizes="132x132" href="6.ico?">
+<link rel="icon" sizes="132x132" href="6.ico?">
+
+ <link rel="apple-touch-icon" sizes="132x132" href="6.ico">
+ <link rel="icon shortcut" sizes="132x132" href="6.ico">
+<link rel="icon" sizes="132x132" href="6.ico">
+ 
 
     
     <meta charset="UTF-8">
@@ -381,6 +387,7 @@ $.fn.dataTable.ext.search.push(function (settings, rowData, dataIndex) {
 </script>
 </body>
 </html>
+
 
 
 
