--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   />
   <script src="https://cdn.jsdelivr.net/gh/philfung/add-to-homescreen@3.5/dist/add-to-homescreen.min.js"></script>
 
-  <link rel="stylesheet" href="./dist/add-to-homescreen.min.css" />
+  <!--<link rel="stylesheet" href="./dist/add-to-homescreen.min.css" />-->
  
 <meta charset="utf-8" />
     <meta
@@ -24,32 +24,6 @@
     <title>Folkedex</title>
     <!-- replace with your web app title-->
     <link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
-
- 
-<script>
-document.addEventListener('DOMContentLoaded', function () {
- window.AddToHomeScreenInstance = window.AddToHomeScreen({
-  appName: 'Folkedex',                                   // Name of the app.
-                                                         // Required.
-  appNameDisplay: 'standalone',                          // If set to 'standalone' (the default), the app name will be diplayed
-                                                         // on it's own, beneath the "Install App" header. If set to 'inline', the
-                                                         // app name will be displayed on a single line like "Install MyApp"
-                                                         // Optional. Default 'standalone'
-  appIconUrl: 'apple-touch-icon.png',                    // App icon link (square, at least 40 x 40 pixels).
-                                                         // Required.
-  assetUrl: 'https://cdn.jsdelivr.net/gh/philfung/add-to-homescreen@3.5/dist/assets/img/',  // Link to directory of library image assets.
-
-  maxModalDisplayCount: -1,                              // If set, the modal will only show this many times.
-                                                         // [Optional] Default: -1 (no limit).  (Debugging: Use this.clearModalDisplayCount() to reset the count)
-  displayOptions:{ showMobile: true, showDesktop: false }, // show on mobile/desktop [Optional] Default: show everywhere
-  allowClose: true, // allow the user to close the modal by tapping outside of it [Optional. Default: true]
-  showArrow: true, // show the bouncing arrow on the modal [Optional. Default: true] (highly recommend leaving at true as drastically affects install rates)
-});
-
- ret = window.AddToHomeScreenInstance.show('en');        // show "add-to-homescreen" instructions to user, or do nothing if already added to homescreen
-                                                         // [optional] language.  If left blank, then language is auto-decided from (1) URL param locale='..' (e.g. /?locale=es) (2) Browser language settings
-});
-</script>
 
  
     
@@ -422,8 +396,35 @@ $.fn.dataTable.ext.search.push(function (settings, rowData, dataIndex) {
     });
 };
 </script>
+
+ 
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+ window.AddToHomeScreenInstance = window.AddToHomeScreen({
+  appName: 'Folkedex',                                   // Name of the app.
+                                                         // Required.
+  appNameDisplay: 'standalone',                          // If set to 'standalone' (the default), the app name will be diplayed
+                                                         // on it's own, beneath the "Install App" header. If set to 'inline', the
+                                                         // app name will be displayed on a single line like "Install MyApp"
+                                                         // Optional. Default 'standalone'
+  appIconUrl: 'apple-touch-icon.png',                    // App icon link (square, at least 40 x 40 pixels).
+                                                         // Required.
+  assetUrl: 'https://cdn.jsdelivr.net/gh/philfung/add-to-homescreen@3.5/dist/assets/img/',  // Link to directory of library image assets.
+
+  maxModalDisplayCount: -1,                              // If set, the modal will only show this many times.
+                                                         // [Optional] Default: -1 (no limit).  (Debugging: Use this.clearModalDisplayCount() to reset the count)
+  displayOptions:{ showMobile: true, showDesktop: false }, // show on mobile/desktop [Optional] Default: show everywhere
+  allowClose: true, // allow the user to close the modal by tapping outside of it [Optional. Default: true]
+  showArrow: true, // show the bouncing arrow on the modal [Optional. Default: true] (highly recommend leaving at true as drastically affects install rates)
+});
+
+ ret = window.AddToHomeScreenInstance.show('en');        // show "add-to-homescreen" instructions to user, or do nothing if already added to homescreen
+                                                         // [optional] language.  If left blank, then language is auto-decided from (1) URL param locale='..' (e.g. /?locale=es) (2) Browser language settings
+});
+</script>
 </body>
 </html>
+
 
 
 
