--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <!--<link rel="stylesheet" href="./dist/add-to-homescreen.min.css" />-->
  
 <meta charset="utf-8" />
-    <meta
+   <!-- <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover"
-    />
+    />-->
     <meta name="mobile-web-app-capable" content="yes" />
     <title>Folkedex</title>
     <!-- replace with your web app title-->
@@ -424,6 +424,7 @@ document.addEventListener('DOMContentLoaded', function () {
 </script>
 </body>
 </html>
+
 
 
 
