--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ document.addEventListener('DOMContentLoaded', function () {
  window.AddToHomeScreenInstance = window.AddToHomeScreen({
   appName: 'Folkedex',                                   // Name of the app.
                                                          // Required.
-  appNameDisplay: 'standalone',                          // If set to 'standalone' (the default), the app name will be diplayed
+  appNameDisplay: 'inline',                          // If set to 'standalone' (the default), the app name will be diplayed
                                                          // on it's own, beneath the "Install App" header. If set to 'inline', the
                                                          // app name will be displayed on a single line like "Install MyApp"
                                                          // Optional. Default 'standalone'
@@ -424,6 +424,7 @@ document.addEventListener('DOMContentLoaded', function () {
 </script>
 </body>
 </html>
+
 
 
 
