--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ document.addEventListener('DOMContentLoaded', function () {
  window.AddToHomeScreenInstance = window.AddToHomeScreen({
   appName: 'Folkedex',                                   // Name of the app.
                                                          // Required.
-  appNameDisplay: 'inline',                          // If set to 'standalone' (the default), the app name will be diplayed
+  appNameDisplay: 'standalone',                          // If set to 'standalone' (the default), the app name will be diplayed
                                                          // on it's own, beneath the "Install App" header. If set to 'inline', the
                                                          // app name will be displayed on a single line like "Install MyApp"
                                                          // Optional. Default 'standalone'
@@ -413,9 +413,9 @@ document.addEventListener('DOMContentLoaded', function () {
 
   maxModalDisplayCount: -1,                              // If set, the modal will only show this many times.
                                                          // [Optional] Default: -1 (no limit).  (Debugging: Use this.clearModalDisplayCount() to reset the count)
-  displayOptions:{ showMobile: true, showDesktop: false }, // show on mobile/desktop [Optional] Default: show everywhere
+  displayOptions:{ showMobile: false, showDesktop: false }, // show on mobile/desktop [Optional] Default: show everywhere
   allowClose: true, // allow the user to close the modal by tapping outside of it [Optional. Default: true]
-  showArrow: true, // show the bouncing arrow on the modal [Optional. Default: true] (highly recommend leaving at true as drastically affects install rates)
+  showArrow: false, // show the bouncing arrow on the modal [Optional. Default: true] (highly recommend leaving at true as drastically affects install rates)
 });
 
  ret = window.AddToHomeScreenInstance.show('en');        // show "add-to-homescreen" instructions to user, or do nothing if already added to homescreen
@@ -424,6 +424,7 @@ document.addEventListener('DOMContentLoaded', function () {
 </script>
 </body>
 </html>
+
 
 
 
